@@ -169,6 +169,25 @@ typedef enum {
     CYGNUM_HAL_INTERRUPT_I2S1_RX          // I2S1 receive interrupt
 } KinetisExtInterrupt_e;
 
+// DMA16..31 share interrupt vectors with DMA0..15 respectively.
+
+#define    CYGNUM_HAL_INTERRUPT_DMA16  CYGNUM_HAL_INTERRUPT_DMA0
+#define    CYGNUM_HAL_INTERRUPT_DMA17  CYGNUM_HAL_INTERRUPT_DMA1
+#define    CYGNUM_HAL_INTERRUPT_DMA18  CYGNUM_HAL_INTERRUPT_DMA2
+#define    CYGNUM_HAL_INTERRUPT_DMA19  CYGNUM_HAL_INTERRUPT_DMA3
+#define    CYGNUM_HAL_INTERRUPT_DMA20  CYGNUM_HAL_INTERRUPT_DMA4
+#define    CYGNUM_HAL_INTERRUPT_DMA21  CYGNUM_HAL_INTERRUPT_DMA5
+#define    CYGNUM_HAL_INTERRUPT_DMA22  CYGNUM_HAL_INTERRUPT_DMA6
+#define    CYGNUM_HAL_INTERRUPT_DMA23  CYGNUM_HAL_INTERRUPT_DMA7
+#define    CYGNUM_HAL_INTERRUPT_DMA34  CYGNUM_HAL_INTERRUPT_DMA8
+#define    CYGNUM_HAL_INTERRUPT_DMA25  CYGNUM_HAL_INTERRUPT_DMA9
+#define    CYGNUM_HAL_INTERRUPT_DMA26  CYGNUM_HAL_INTERRUPT_DMA10
+#define    CYGNUM_HAL_INTERRUPT_DMA27  CYGNUM_HAL_INTERRUPT_DMA11
+#define    CYGNUM_HAL_INTERRUPT_DMA28  CYGNUM_HAL_INTERRUPT_DMA12
+#define    CYGNUM_HAL_INTERRUPT_DMA29  CYGNUM_HAL_INTERRUPT_DMA13
+#define    CYGNUM_HAL_INTERRUPT_DMA30  CYGNUM_HAL_INTERRUPT_DMA14
+#define    CYGNUM_HAL_INTERRUPT_DMA31  CYGNUM_HAL_INTERRUPT_DMA15
+
 #define CYGNUM_HAL_INTERRUPT_NVIC_MAX (CYGNUM_HAL_INTERRUPT_I2S1_RX)
 
 #define CYGNUM_HAL_ISR_MIN            0
