@@ -271,6 +271,8 @@
 #define CYGHWR_HAL_KINETIS_SIM_SCGC6_FTM1_S            25
 #define CYGHWR_HAL_KINETIS_SIM_SCGC6_ADC0_M            0x8000000
 #define CYGHWR_HAL_KINETIS_SIM_SCGC6_ADC0_S            27
+#define CYGHWR_HAL_KINETIS_SIM_SCGC6_ADC2_M            0x10000000
+#define CYGHWR_HAL_KINETIS_SIM_SCGC6_ADC2_S            28
 #define CYGHWR_HAL_KINETIS_SIM_SCGC6_RTC_M             0x20000000
 #define CYGHWR_HAL_KINETIS_SIM_SCGC6_RTC_S             29
 
@@ -308,6 +310,8 @@
         CYGHWR_HAL_KINETIS_SIM_SCGC(6, CYGHWR_HAL_KINETIS_SIM_SCGC6_FTM1_S)
 #define CYGHWR_HAL_KINETIS_SIM_SCGC_ADC0     \
         CYGHWR_HAL_KINETIS_SIM_SCGC(6, CYGHWR_HAL_KINETIS_SIM_SCGC6_ADC0_S)
+#define CYGHWR_HAL_KINETIS_SIM_SCGC_ADC2     \
+        CYGHWR_HAL_KINETIS_SIM_SCGC(6, CYGHWR_HAL_KINETIS_SIM_SCGC6_ADC2_S)
 #define CYGHWR_HAL_KINETIS_SIM_SCGC_RTC      \
         CYGHWR_HAL_KINETIS_SIM_SCGC(6, CYGHWR_HAL_KINETIS_SIM_SCGC6_RTC_S)
 
